<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin_dashboard"
            android:icon="@drawable/ic_nav_dashboard"
            android:title="@string/nav_dashboard" />

        <item
            android:id="@+id/nav_admin_users"
            android:icon="@drawable/ic_nav_users"
            android:title="@string/nav_users" />

        <item
            android:id="@+id/nav_create_user"
            android:icon="@drawable/ic_nav_add"
            android:title="@string/create_user_title" />

        <item
            android:id="@+id/nav_admin_products"
            android:icon="@drawable/ic_nav_products"
            android:title="@string/nav_products" />

        <item
            android:id="@+id/nav_admin_reports"
            android:icon="@drawable/ic_nav_reports"
            android:title="@string/nav_reports" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_admin_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/btn_logout" />
    </group>

</menu>
