<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_buyer"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.project.store.buyer.HomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/action_home_to_product_detail"
            app:destination="@id/nav_product_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_catalog"
        android:name="com.project.store.buyer.CatalogFragment"
        android:label="@string/nav_catalog">
        <action
            android:id="@+id/action_catalog_to_product_detail"
            app:destination="@id/nav_product_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_product_detail"
        android:name="com.project.store.buyer.ProductDetailFragment"
        android:label="@string/nav_product_detail">
        <argument
            android:name="productId"
            android:defaultValue="1"
            app:argType="integer" />
        <action
            android:id="@+id/action_product_detail_to_cart"
            app:destination="@id/nav_cart" />
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.project.store.buyer.CartFragment"
        android:label="@string/nav_cart">
        <action
            android:id="@+id/action_cart_to_checkout"
            app:destination="@id/nav_checkout" />
    </fragment>

    <fragment
        android:id="@+id/nav_checkout"
        android:name="com.project.store.buyer.CheckoutFragment"
        android:label="@string/nav_checkout" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.project.store.buyer.ProfileFragment"
        android:label="@string/nav_profile" />

</navigation>
