<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/editUserScroll"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="@dimen/spacing_none"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_screen">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameLayout"
                style="@style/Widget.TiendaVirtual.TextInputLayout"
                android:layout_width="@dimen/spacing_none"
                android:layout_height="wrap_content"
                android:hint="@string/label_user_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user_name"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userEmailLayout"
                style="@style/Widget.TiendaVirtual.TextInputLayout"
                android:layout_width="@dimen/spacing_none"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_md"
                android:hint="@string/label_user_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userRoleLayout"
                style="@style/Widget.TiendaVirtual.TextInputLayout"
                android:layout_width="@dimen/spacing_none"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_md"
                android:hint="@string/label_user_role"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userEmailLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userRoleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user_role"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/userStatusSwitch"
                style="@style/Widget.TiendaVirtual.Switch"
                android:layout_width="@dimen/spacing_none"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_lg"
                android:text="@string/user_status_active"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/text_md"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userRoleLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveUserButton"
                style="@style/Widget.TiendaVirtual.Button.Primary"
                android:layout_width="@dimen/spacing_none"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_lg"
                android:text="@string/btn_save_user_changes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userStatusSwitch" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
